test/resources/typer/passing/ExtLambda5.2.scala
object Lambda {
  val f: Int => Int => Int = \(x: Int) -> \(y: Int): Int -> x + y;
  Std.printInt(f(1)(2))
}
